# containerd-rs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.release  Makefile  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: build.yml  ci.yml  conformance-reusable.yml  conformance-sig-api-machinery.yml  conformance-sig-apps.yml  conformance-sig-auth.yml  conformance-sig-cli.yml  conformance-sig-instrumentation.yml  conformance-sig-network.yml  conformance-sig-node.yml  conformance-sig-scheduling.yml  conformance-sig-storage.yml  conformance.yml  critest.yml  release.yml
ci/: cni-node.sh  config.toml  conformance-docker.sh  conformance.Dockerfile  crictl-validate.sh  critest-docker.sh  critest.sh  install-tooling.sh  kubeadm-init.sh  kubelet-node.sh  run-conformance.sh
crates/containerd-rs/: Cargo.toml
crates/containerd-rs/src/: config.rs  logging.rs  main.rs
crates/content/: Cargo.toml
crates/content/src/: lib.rs
crates/core-types/: Cargo.toml
crates/core-types/src/: lib.rs
crates/cri/: Cargo.toml  build.rs
crates/cri/src/: admin.rs  lib.rs  locks.rs  server.rs  spdy.rs  streaming.rs
crates/cri/tests/: contract_image_service.rs  contract_run_pod_sandbox.rs  contract_runtime_service.rs  integration_image_mgmt.rs  integration_pod_lifecycle.rs
crates/cri/tests/common/: mod.rs
crates/images/: Cargo.toml
crates/images/src/: dockercfg.rs  gc.rs  identity.rs  import.rs  lib.rs  pull.rs  unpack.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs  records.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bundle.rs  cgroup.rs  crun.rs  lib.rs  runc.rs  seccomp.rs  shim.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: cni.rs  lib.rs  net.rs  pid_holder.rs
crates/snapshots/: Cargo.toml
crates/snapshots/src/: diff.rs  lib.rs
docs/: architecture.md  configuration.md
docs/superpowers/plans/: 2026-06-21-conformance-docker-harness.md  2026-06-21-k0s-worker-cri-gaps.md  2026-07-15-image-import.md
docs/superpowers/specs/: 2026-06-21-conformance-docker-harness-design.md  2026-06-21-k0s-worker-cri-gaps-design.md  2026-07-15-image-import-design.md
proto/admin/v1/: admin.proto
proto/runtime/v1/: api.proto
