[package]
name = "containerd-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
default-run = "containerd-rs"

[[bin]]
name = "containerd-rs"
path = "src/main.rs"

[dependencies]
core-types.workspace = true
content.workspace = true
metadata.workspace = true
snapshots.workspace = true
images.workspace = true
cri.workspace = true
runtime.workspace = true
sandbox.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
