[package]
name = "cri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core-types.workspace = true
metadata.workspace = true
content.workspace = true
snapshots.workspace = true
images.workspace = true
runtime.workspace = true
sandbox.workspace = true
serde.workspace = true
serde_json.workspace = true
rustix = { workspace = true }
humantime = "2"
futures-util = "0.3"
tracing.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
futures-core.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
axum.workspace = true
flate2.workspace = true
bytes.workspace = true
hyper.workspace = true
hyper-util.workspace = true
base64.workspace = true
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
tonic-prost-build.workspace = true
# Vendored protoc so the build needs no system protobuf-compiler (CI runners
# don't ship one); keeps the build hermetic and local == CI.
protoc-bin-vendored = "3"

[dev-dependencies]
tempfile = "3"
oci-spec.workspace = true
tokio-tungstenite = "0.24"
# Integration (contract) tests in tests/ are a separate crate, so the crates
# they name directly must be dev-deps even when also normal deps of cri.
core-types.workspace = true
content.workspace = true
metadata.workspace = true
tokio.workspace = true
tonic.workspace = true
hyper-util.workspace = true
tar = { workspace = true }
sha2.workspace = true
hex.workspace = true
