[package]
name = "images"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core-types.workspace = true
content.workspace = true
snapshots.workspace = true
metadata.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
oci-client.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
