[package]
name = "runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
core-types.workspace = true
tracing.workspace = true
oci-spec.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rustix = { workspace = true }

[dev-dependencies]
tempfile = "3"
